--- a/situstempototo/index.html
+++ b/situstempototo/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
     <link rel="canonical" href="http://ftp.tmcdc.org/situstempototo/">
-    <link rel="amphtml" href="https://malambu.xyz/dc/tempototo/"/>
+    <link rel="amphtml" href="https://malambu.xyz/dc/situstempototo/"/>
     <meta name="google-site-verification" content="g0e4EVX-OqOIffcSFnJNoOPUMX00mw5hIYdTXXNGfGs" />
     <link rel="icon" type="image/png" href="//e60ba0-7c.myshopify.com/cdn/shop/files/bg_f8f8f8-flat_750x_075_f-pad_750x1000_f8f8f8-removebg-preview.png?crop=center&height=32&v=1709879215&width=32">
     <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
@@ -24,8 +24,6 @@
   <meta property="og:price:currency" content="IDR"><meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="TEMPOTOTO⚡SITUS SLOT GACOR SERVER SLOT THAILAND">
 <meta name="twitter:description" content="TEMPOTOTO⚡ merupakan situs slot gacor server slot thailand terbaru. TEMPOTOTO terkenal bermain slot gacor dengan menggunakan server slot thailand.">
-
-
     <script src="//e60ba0-7c.myshopify.com/cdn/shop/t/1/assets/constants.js?v=58251544750838685771709868911" defer="defer"></script>
     <script src="//e60ba0-7c.myshopify.com/cdn/shop/t/1/assets/pubsub.js?v=158357773527763999511709868919" defer="defer"></script>
     <script src="//e60ba0-7c.myshopify.com/cdn/shop/t/1/assets/global.js?v=37284204640041572741709868913" defer="defer"></script><script src="//e60ba0-7c.myshopify.com/cdn/shop/t/1/assets/animations.js?v=88693664871331136111709868893" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/69222236384/digital_wallets/dialog">
